--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@mysten/dapp-kit": "^0.16.1",
+    "@mysten/sui": "^1.29.0",
+    "@tanstack/react-query": "^5.74.7",
     "react": "^18.3",
     "react-dom": "^18.3",
     "react-icons": "^5.5.0",
